src/main/antlr4/com/githoov/LookMLParser.java
// Generated from LookML.g4 by ANTLR 4.6

    package net.snowflake.look4j;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LookMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VIEW=1, SQL_TABLE_NAME=2, FIELD=3, SQL=4, LABEL=5, VIEW_LABEL=6, TYPE=7, 
		LINK=8, URL=9, DESCRIPTION=10, DRILL_FIELDS=11, DERIVED_TABLE=12, SQL_TRIGGER_VALUE=13, 
		SORTKEYS=14, STRING=15, QUOTED_STRING=16, TABLE_REF=17, WS=18, COMMENT=19, 
		DELIM=20, SEP=21, LBRACE=22, RBRACE=23;
	public static final int
		RULE_lookml = 0, RULE_view = 1, RULE_sql_table_name = 2, RULE_derived_table = 3, 
		RULE_derived_table_pair = 4, RULE_field = 5, RULE_pair = 6, RULE_array_key = 7, 
		RULE_array = 8, RULE_key = 9, RULE_value = 10, RULE_statement = 11, RULE_comment = 12;
	public static final String[] ruleNames = {
		"lookml", "view", "sql_table_name", "derived_table", "derived_table_pair", 
		"field", "pair", "array_key", "array", "key", "value", "statement", "comment"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'view'", "'sql_table_name'", null, "'sql'", "'label'", "'view_label'", 
		"'type'", "'link'", "'url'", "'description'", "'drill_fields'", "'derived_table'", 
		"'sql_trigger_value'", "'sortkeys'", null, null, null, null, null, "';;'", 
		"':'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "VIEW", "SQL_TABLE_NAME", "FIELD", "SQL", "LABEL", "VIEW_LABEL", 
		"TYPE", "LINK", "URL", "DESCRIPTION", "DRILL_FIELDS", "DERIVED_TABLE", 
		"SQL_TRIGGER_VALUE", "SORTKEYS", "STRING", "QUOTED_STRING", "TABLE_REF", 
		"WS", "COMMENT", "DELIM", "SEP", "LBRACE", "RBRACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LookML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LookMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class LookmlContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LookMLParser.EOF, 0); }
		public List<ViewContext> view() {
			return getRuleContexts(ViewContext.class);
		}
		public ViewContext view(int i) {
			return getRuleContext(ViewContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public LookmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lookml; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterLookml(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitLookml(this);
		}
	}

	public final LookmlContext lookml() throws RecognitionException {
		LookmlContext _localctx = new LookmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lookml);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIEW || _la==COMMENT) {
				{
				setState(28);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VIEW:
					{
					setState(26);
					view();
					}
					break;
				case COMMENT:
					{
					setState(27);
					comment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ViewContext extends ParserRuleContext {
		public TerminalNode VIEW() { return getToken(LookMLParser.VIEW, 0); }
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public TerminalNode STRING() { return getToken(LookMLParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(LookMLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LookMLParser.RBRACE, 0); }
		public Sql_table_nameContext sql_table_name() {
			return getRuleContext(Sql_table_nameContext.class,0);
		}
		public Derived_tableContext derived_table() {
			return getRuleContext(Derived_tableContext.class,0);
		}
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public ViewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_view; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterView(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitView(this);
		}
	}

	public final ViewContext view() throws RecognitionException {
		ViewContext _localctx = new ViewContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_view);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			match(VIEW);
			setState(36);
			match(SEP);
			setState(37);
			match(STRING);
			setState(38);
			match(LBRACE);
			setState(41);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SQL_TABLE_NAME:
				{
				setState(39);
				sql_table_name();
				}
				break;
			case DERIVED_TABLE:
				{
				setState(40);
				derived_table();
				}
				break;
			case FIELD:
			case SQL:
			case LBRACE:
			case RBRACE:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FIELD) | (1L << SQL) | (1L << LBRACE))) != 0)) {
				{
				{
				setState(43);
				field();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_table_nameContext extends ParserRuleContext {
		public TerminalNode SQL_TABLE_NAME() { return getToken(LookMLParser.SQL_TABLE_NAME, 0); }
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode DELIM() { return getToken(LookMLParser.DELIM, 0); }
		public Sql_table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_table_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterSql_table_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitSql_table_name(this);
		}
	}

	public final Sql_table_nameContext sql_table_name() throws RecognitionException {
		Sql_table_nameContext _localctx = new Sql_table_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(SQL_TABLE_NAME);
			setState(52);
			match(SEP);
			setState(53);
			statement();
			setState(54);
			match(DELIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Derived_tableContext extends ParserRuleContext {
		public TerminalNode DERIVED_TABLE() { return getToken(LookMLParser.DERIVED_TABLE, 0); }
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public TerminalNode LBRACE() { return getToken(LookMLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LookMLParser.RBRACE, 0); }
		public List<Derived_table_pairContext> derived_table_pair() {
			return getRuleContexts(Derived_table_pairContext.class);
		}
		public Derived_table_pairContext derived_table_pair(int i) {
			return getRuleContext(Derived_table_pairContext.class,i);
		}
		public Derived_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_derived_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterDerived_table(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitDerived_table(this);
		}
	}

	public final Derived_tableContext derived_table() throws RecognitionException {
		Derived_tableContext _localctx = new Derived_tableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_derived_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(DERIVED_TABLE);
			setState(57);
			match(SEP);
			setState(58);
			match(LBRACE);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQL) | (1L << DRILL_FIELDS) | (1L << SQL_TRIGGER_VALUE) | (1L << SORTKEYS))) != 0)) {
				{
				{
				setState(59);
				derived_table_pair();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Derived_table_pairContext extends ParserRuleContext {
		public TerminalNode SQL() { return getToken(LookMLParser.SQL, 0); }
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode DELIM() { return getToken(LookMLParser.DELIM, 0); }
		public Array_keyContext array_key() {
			return getRuleContext(Array_keyContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TerminalNode SQL_TRIGGER_VALUE() { return getToken(LookMLParser.SQL_TRIGGER_VALUE, 0); }
		public Derived_table_pairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_derived_table_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterDerived_table_pair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitDerived_table_pair(this);
		}
	}

	public final Derived_table_pairContext derived_table_pair() throws RecognitionException {
		Derived_table_pairContext _localctx = new Derived_table_pairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_derived_table_pair);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SQL:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(SQL);
				setState(68);
				match(SEP);
				setState(69);
				statement();
				setState(70);
				match(DELIM);
				}
				break;
			case DRILL_FIELDS:
			case SORTKEYS:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				array_key();
				setState(73);
				match(SEP);
				setState(74);
				array();
				}
				break;
			case SQL_TRIGGER_VALUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				match(SQL_TRIGGER_VALUE);
				setState(77);
				match(SEP);
				setState(78);
				statement();
				setState(79);
				match(DELIM);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public TerminalNode FIELD() { return getToken(LookMLParser.FIELD, 0); }
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public TerminalNode STRING() { return getToken(LookMLParser.STRING, 0); }
		public TerminalNode LBRACE() { return getToken(LookMLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LookMLParser.RBRACE, 0); }
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public TerminalNode SQL() { return getToken(LookMLParser.SQL, 0); }
		public TerminalNode TABLE_REF() { return getToken(LookMLParser.TABLE_REF, 0); }
		public TerminalNode DELIM() { return getToken(LookMLParser.DELIM, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_field);
		int _la;
		try {
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(FIELD);
				setState(84);
				match(SEP);
				setState(85);
				match(STRING);
				setState(86);
				match(LBRACE);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQL) | (1L << LABEL) | (1L << VIEW_LABEL) | (1L << TYPE) | (1L << LINK) | (1L << URL) | (1L << DESCRIPTION) | (1L << DRILL_FIELDS) | (1L << SORTKEYS))) != 0)) {
					{
					{
					setState(87);
					pair();
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(93);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(LBRACE);
				setState(95);
				match(RBRACE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				match(SQL);
				setState(97);
				match(SEP);
				setState(98);
				match(TABLE_REF);
				setState(99);
				match(DELIM);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(SQL);
				setState(101);
				match(SEP);
				setState(102);
				statement();
				setState(103);
				match(DELIM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public TerminalNode SEP() { return getToken(LookMLParser.SEP, 0); }
		public TerminalNode LBRACE() { return getToken(LookMLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LookMLParser.RBRACE, 0); }
		public TerminalNode STRING() { return getToken(LookMLParser.STRING, 0); }
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public Array_keyContext array_key() {
			return getRuleContext(Array_keyContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode DELIM() { return getToken(LookMLParser.DELIM, 0); }
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pair);
		int _la;
		try {
			setState(131);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				key();
				setState(108);
				match(SEP);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==STRING) {
					{
					setState(109);
					match(STRING);
					}
				}

				setState(112);
				match(LBRACE);
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQL) | (1L << LABEL) | (1L << VIEW_LABEL) | (1L << TYPE) | (1L << LINK) | (1L << URL) | (1L << DESCRIPTION) | (1L << DRILL_FIELDS) | (1L << SORTKEYS))) != 0)) {
					{
					{
					setState(113);
					pair();
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				match(RBRACE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				array_key();
				setState(122);
				match(SEP);
				setState(123);
				array();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				key();
				setState(126);
				match(SEP);
				setState(127);
				value();
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DELIM) {
					{
					setState(128);
					match(DELIM);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_keyContext extends ParserRuleContext {
		public TerminalNode DRILL_FIELDS() { return getToken(LookMLParser.DRILL_FIELDS, 0); }
		public TerminalNode SORTKEYS() { return getToken(LookMLParser.SORTKEYS, 0); }
		public Array_keyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterArray_key(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitArray_key(this);
		}
	}

	public final Array_keyContext array_key() throws RecognitionException {
		Array_keyContext _localctx = new Array_keyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_array_key);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !(_la==DRILL_FIELDS || _la==SORTKEYS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(LookMLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(LookMLParser.STRING, i);
		}
		public List<TerminalNode> QUOTED_STRING() { return getTokens(LookMLParser.QUOTED_STRING); }
		public TerminalNode QUOTED_STRING(int i) {
			return getToken(LookMLParser.QUOTED_STRING, i);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_array);
		int _la;
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==STRING) {
					{
					{
					setState(135);
					match(STRING);
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==QUOTED_STRING) {
					{
					{
					setState(141);
					match(QUOTED_STRING);
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public TerminalNode SQL() { return getToken(LookMLParser.SQL, 0); }
		public TerminalNode LABEL() { return getToken(LookMLParser.LABEL, 0); }
		public TerminalNode TYPE() { return getToken(LookMLParser.TYPE, 0); }
		public TerminalNode LINK() { return getToken(LookMLParser.LINK, 0); }
		public TerminalNode URL() { return getToken(LookMLParser.URL, 0); }
		public TerminalNode DESCRIPTION() { return getToken(LookMLParser.DESCRIPTION, 0); }
		public TerminalNode VIEW_LABEL() { return getToken(LookMLParser.VIEW_LABEL, 0); }
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitKey(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_key);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SQL) | (1L << LABEL) | (1L << VIEW_LABEL) | (1L << TYPE) | (1L << LINK) | (1L << URL) | (1L << DESCRIPTION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode TABLE_REF() { return getToken(LookMLParser.TABLE_REF, 0); }
		public TerminalNode QUOTED_STRING() { return getToken(LookMLParser.QUOTED_STRING, 0); }
		public TerminalNode STRING() { return getToken(LookMLParser.STRING, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING) | (1L << QUOTED_STRING) | (1L << TABLE_REF))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(LookMLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(LookMLParser.STRING, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(153);
				match(STRING);
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(LookMLParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LookMLListener ) ((LookMLListener)listener).exitComment(this);
		}
	}
